access management model

--- a/InvenTree/templates/user_list.html
+++ b/InvenTree/templates/user_list.html
@@ -4,18 +4,17 @@
         {{ u.first_name }}
         {{u.username}}
         {{u.job_role}}
-    {{u.pk}}
-    <a href="{% url 'update-user' u.pk %}">edit</a>
-
+        {{u.pk}}
+        <a href="{% url 'update-user' u.pk %}">edit</a>
+        <form method="POST" action="{% url 'delete-user' u.pk %}">
+        {% csrf_token %}
+        <input type="button" value="delete">
+        </form>
     </div>
     {% endfor %}
     <div>
        Filter
        By User Type
-
-
-   </div>
-
-   </div>
-
-   <a href="{% url 'create-user' %}">Create User</a>
+    </div>
+</div>
+    <a href="{% url 'create-user' %}">Create User</a>
