--- a/InvenTree/templates/navbar.html
+++ b/InvenTree/templates/navbar.html
@@ -12,6 +12,7 @@
       <li><a href="{% url 'company-index' %}">Suppliers</a></li>
       <li><a href="{% url 'purchase-order-index' %}">Orders</a></li>
       <li><a href="{% url 'user-list' %}">Users</a></li>
+      <li><a href="{% url 'group-list' %}">Access</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         {% include "search_form.html" %}
