--- a/InvenTree/users/templates/user_form.html
+++ b/InvenTree/users/templates/user_form.html
@@ -1,7 +1,20 @@
-{{form.errors}}
-<form method='POST'>
-    {% csrf_token %}
-{{ form.as_p }}
+{% extends 'base.html' %}
 
-<input type='submit' value='submit'/>
-</form>
+{% load crispy_forms_tags %}
+
+{% block content %}
+  <form method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="button" class="btn btn-secondary">Close</button>
+    <button type="submit" class="btn btn-primary">Add User</button>
+  </form>
+{% endblock %}
+
+
+
+
+
+
+
+
